Fix bug with QR code

--- a/src/EduBoxBundle/Resources/views/Front/book/show.html.twig
+++ b/src/EduBoxBundle/Resources/views/Front/book/show.html.twig
@@ -103,12 +103,12 @@
                                 </p>
                             </li>
                         {% endif %}
-                        {#<li class="list-group-item">
+                        <li class="list-group-item">
                             <b>QR code</b>
                             <p>
                                 <img src="{{ path('edubox_book_qrcode', {'id': book.id}) }}" alt="">
                             </p>
-                        </li>#}
+                        </li>
                     </ul>
                 </div>
             </div>
