--- a/src/EduBoxBundle/Resources/views/Front/book/qrcode.html.twig
+++ b/src/EduBoxBundle/Resources/views/Front/book/qrcode.html.twig
@@ -9,8 +9,32 @@
 {% endblock %}
 
 {% block front_content %}
-    <div class="row">
-        <div class="col-sm-9">
+    <div class="row ">
+        <div class="col-sm-3 col-sm-push-9">
+            <div class="box box-primary">
+                <div class="box-header">
+                    <div class="box-title">
+                        Netijeler
+                    </div>
+                </div>
+                <div class="box-body no-padding">
+                    <table class="table bordered-table" id="scanner_result_table">
+                    </table>
+                </div>
+            </div>
+            <div class="box box-primary">
+                <div class="box-header">
+                    <div class="box-title">
+                        Kameralar
+                    </div>
+                </div>
+                <div class="box-body no-padding">
+                    <table class="table bordered-table" id="scanner_cameras">
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-9 col-sm-pull-3">
             <div class="box box-primary">
                 <div class="box-header">
                     <div class="box-title">
@@ -21,13 +45,38 @@
                     <script type="text/javascript"  src="{{ asset('assets/libs/instascan/instascan.min.js') }}"></script>
                     <video id="instascancam" style="transform: scaleX(-1);width: 100%;"></video>
                     <script type="text/javascript">
+                        function validURL(str) {
+                            var pattern = new RegExp('^(https?:\\/\\/)?'+ // protocol
+                                '((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.)+[a-z]{2,}|'+ // domain name
+                                '((\\d{1,3}\\.){3}\\d{1,3}))'+ // OR ip (v4) address
+                                '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*'+ // port and path
+                                '(\\?[;&a-z\\d%_.~+=-]*)?'+ // query string
+                                '(\\#[-a-z\\d_]*)?$','i'); // fragment locator
+                            return !!pattern.test(str);
+                        }
                         let scanner = new Instascan.Scanner({ video: document.getElementById('instascancam') });
                         scanner.addListener('scan', function (content) {
-                            console.log(content);
+                            if (validURL(content)) {
+                                $("#scanner_result_table").append(
+                                    "<tr>" +
+                                    "<td>" +
+                                    "<a class='btn btn-primary' href='"+content+"' target='_blank'>"+content+"</a>" +
+                                    "</td>"+
+                                    "</tr>"
+                                );
+                            }
                         });
                         Instascan.Camera.getCameras().then(function (cameras) {
                             if (cameras.length > 0) {
-
+                                for (var i = 0; i < cameras.length; i++) {
+                                    $("#scanner_cameras").append(
+                                        "<tr>" +
+                                        "<td>" +
+                                        "<a class='btn btn-primary' href='javascript:void(0)' data-key='"+i+"'>"+cameras[i].name+"</a>" +
+                                        "</td>" +
+                                        "</tr>"
+                                    );
+                                }
                                 scanner.start(cameras[cameras.length-1]);
                             } else {
                                 console.error('No cameras found.');
@@ -36,24 +85,6 @@
                             console.error(e);
                         });
                     </script>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-3">
-            <div class="box box-primary">
-                <div class="box-header">
-                    <div class="box-title">
-                        Kameralar
-                    </div>
-                </div>
-                <div class="box-body no-padding">
-                    <table class="table bordered-table">
-                        <tr>
-                            <td>
-                                Camera1
-                            </td>
-                        </tr>
-                    </table>
                 </div>
             </div>
         </div>
