--- a/src/EduBoxBundle/Resources/views/Front/problem/list.html.twig
+++ b/src/EduBoxBundle/Resources/views/Front/problem/list.html.twig
@@ -33,6 +33,9 @@
                             {% endfor %}
                         </tbody>
                     </table>
+                    <div class="col-md-12 text-center">
+                        {{ knp_pagination_render(problems) }}
+                    </div>
                 </div>
             </div>
         </div>
