--- a/src/EduBoxBundle/Resources/views/Admin/Core/add_block.html.twig
+++ b/src/EduBoxBundle/Resources/views/Admin/Core/add_block.html.twig
@@ -1,5 +1,5 @@
 <li>
     <a href="{{ path('homepage') }}">
-        Go to site <i class="fa fa-arrow-right"></i>
+        Saýta geç <i class="fa fa-arrow-right"></i>
     </a>
 </li>
