--- a/src/EduBoxBundle/Resources/views/Front/author/list.html.twig
+++ b/src/EduBoxBundle/Resources/views/Front/author/list.html.twig
@@ -17,6 +17,9 @@
             {% for author in authors %}
                 {% include '@EduBox/Front/author/single.html.twig' with {'author': author} only %}
             {% endfor %}
+            <div class="col-md-12 text-center">
+                {{ knp_pagination_render(authors) }}
+            </div>
         </div>
 
         <div class="col-md-3">
