--- a/src/EduBoxBundle/Resources/views/Front/homepage.html.twig
+++ b/src/EduBoxBundle/Resources/views/Front/homepage.html.twig
@@ -5,5 +5,28 @@
 {% block front_title %}{{  parent() }} / {{ title }}{% endblock %}
 
 {% block front_content %}
-    <h3>This is home page!</h3>
+    <div id="carousel-homepage-generic" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-homepage-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-homepage-generic" data-slide-to="1" class=""></li>
+            <li data-target="#carousel-homepage-generic" data-slide-to="2" class=""></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="{{ asset('uploads/media/image/slider/library.jpg') }}" alt="Akylly kitaphana">
+            </div>
+            <div class="item">
+                <img src="{{ asset('uploads/media/image/slider/problems.jpg') }}" alt="Informatikadan meseleler">
+            </div>
+            <div class="item">
+                <img src="{{ asset('uploads/media/image/slider/resources.jpg') }}" alt="Maglumatlar">
+            </div>
+        </div>
+        <a class="left carousel-control" href="#carousel-homepage-generic" data-slide="prev">
+            <span class="fa fa-angle-left"></span>
+        </a>
+        <a class="right carousel-control" href="#carousel-homepage-generic" data-slide="next">
+            <span class="fa fa-angle-right"></span>
+        </a>
+    </div>
 {% endblock %}
