--- a/src/EduBoxBundle/Resources/views/Front/resource/list.html.twig
+++ b/src/EduBoxBundle/Resources/views/Front/resource/list.html.twig
@@ -33,6 +33,9 @@
                         {% endfor %}
                         </tbody>
                     </table>
+                    <div class="col-md-12 text-center">
+                        {{ knp_pagination_render(resources) }}
+                    </div>
                 </div>
             </div>
         </div>
