Add sample data

--- a/src/EduBoxBundle/Resources/views/Front/author/show.html.twig
+++ b/src/EduBoxBundle/Resources/views/Front/author/show.html.twig
@@ -16,7 +16,7 @@
                     {% if author.image.size is defined %}
                         <img src="{% path author.image, 'reference' %}" alt="" width="100%">
                     {% else %}
-                        <img src="{{ asset('uploads/media/author.jpg') }}" alt="" width="100%">
+                        <img src="{{ asset('uploads/image/author.jpg') }}" alt="" width="100%">
                     {% endif %}
                 </div>
             </div>
