--- a/src/EduBoxBundle/Resources/views/Front/book/single.html.twig
+++ b/src/EduBoxBundle/Resources/views/Front/book/single.html.twig
@@ -2,7 +2,7 @@
     <a href="{{ path('edubox_book_show', {'id': book.id}) }}">
         <div class="box box-primary box-solid">
             <!-- /.box-header -->
-            <div class="box-body no-padding book-image" style="background-image: url({% if book.bookImage.size is defined %}{% path book.bookImage, 'reference' %}{% else %}{{ asset('uploads/media/book.jpg') }}{% endif %});">
+            <div class="box-body no-padding book-image" style="background-image: url({% if book.bookImage.size is defined %}{% path book.bookImage, 'reference' %}{% else %}{{ asset('uploads/image/book.jpg') }}{% endif %});">
             </div>
             <!-- /.box-body -->
             <div class="box-header">
