--- a/src/EduBoxBundle/Resources/views/Front/contact.html.twig
+++ b/src/EduBoxBundle/Resources/views/Front/contact.html.twig
@@ -31,6 +31,10 @@
                         <label>Hatyňyz</label>
                         <textarea class="form-control" style="resize: vertical" rows="12"></textarea>
                     </div>
+                    <div class="form-group">
+                        <label>Arhiw faýl (zip formatda)</label>
+                        <input type="file" class="form-control">
+                    </div>
                 </div>
                 <!-- /.box-body -->
                 <div class="box-footer">
