--- a/src/EduBoxBundle/Resources/views/Front/book/list.html.twig
+++ b/src/EduBoxBundle/Resources/views/Front/book/list.html.twig
@@ -18,8 +18,10 @@
             {% for book in books %}
                 {% include '@EduBox/Front/book/single.html.twig' with {'book': book} only %}
             {% endfor %}
-            <div class="col-md-12 text-center">
-                {{ knp_pagination_render(books) }}
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    {{ knp_pagination_render(books) }}
+                </div>
             </div>
         </div>
 
