--- a/src/EduBoxBundle/Resources/views/Front/book/single.html.twig
+++ b/src/EduBoxBundle/Resources/views/Front/book/single.html.twig
@@ -6,11 +6,11 @@
             </div>
             <!-- /.box-body -->
             <div class="box-header">
-                <h3 class="box-title">
+                <h3 class="box-title book-title">
                     {{ book.name }}
-                    {% for author in book.authors %}
+                    {#{% for author in book.authors %}
                         {% if loop.first %} - {% endif %}{{ author.fullName }}{% if not loop.last %}, {% endif %}
-                    {% endfor %}
+                    {% endfor %}#}
                 </h3>
                 <div class="box-tools pull-right">
                     <span data-toggle="tooltip" title="" class="badge bg-blue-active" style="bottom: 35px;">{{ book.pageCount }}</span>
