--- a/src/EduBoxBundle/Resources/views/Front/book/single.html.twig
+++ b/src/EduBoxBundle/Resources/views/Front/book/single.html.twig
@@ -7,7 +7,7 @@
             <!-- /.box-body -->
             <div class="box-header">
                 <h3 class="box-title book-title">
-                    {{ book.name }}
+                    {{ book.name|slice(0,35) }}{% if book.name|length > 35 %}...{% endif %}
                     {#{% for author in book.authors %}
                         {% if loop.first %} - {% endif %}{{ author.fullName }}{% if not loop.last %}, {% endif %}
                     {% endfor %}#}
