Edit some text, set too long stdout of Submission entity, add slider images

--- a/src/EduBoxBundle/Resources/views/Front/problem/show.html.twig
+++ b/src/EduBoxBundle/Resources/views/Front/problem/show.html.twig
@@ -52,7 +52,7 @@
                 </div>
                 <div class="box-header">
                     <div class="box-title">
-                        Jogabyny ibermek
+                        Öz koduňyzy barlatmak
                     </div>
                     <div class="box-tools pull-right">
                         <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
@@ -179,7 +179,7 @@
                                 <p>
                                     -
                                 </p>
-                            </li>>
+                            </li>
                         {% endif %}
                         <li class="list-group-item">
                             <b>Wagt çäklendirme</b>
